# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli.py  diff.py  file_parser.py  generate_difference.py  parser.py  tree_engine.py
gendiff/formats/: json.py  plain.py  string.py
gendiff/scripts/: __init__.py  gendiff.py
