[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Educational project. Determines differences between two files"
authors = ["Timur <tim.vildanov@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
flake8 = "^6.1.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
